--- a/classic-guild-bank/package.json
+++ b/classic-guild-bank/package.json
@@ -24,14 +24,18 @@
     "@clr/icons": "^3.1.12",
     "@clr/ui": "^3.1.12",
     "@webcomponents/custom-elements": "1.2.4",
+    "ansi-html": "^0.0.8",
     "core-js": "3.1.4",
+    "minimist": "^1.2.5",
     "rxjs": "^6.6.7",
+    "terser": "^4.8.1",
+    "tough-cookie": "^4.1.3",
     "tslib": "^1.14.1",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.901.15",
-    "@angular/cli": "9.1.15",
+    "@angular/cli": "^9.1.15",
     "@angular/compiler-cli": "9.1.13",
     "@angular/language-service": "9.1.13",
     "@types/jasmine": "3.3.13",
